# trading_crew

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_MANUAL.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  USER_MANUAL.md  alembic.ini  docker-compose.yml  pyproject.toml  trading_crew.db-shm  trading_crew.db-wal
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  strategy_proposal.yml
.github/workflows/: ci.yml  release.yml
dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentCard.tsx  CandlestickChart.tsx  ClosedTradesTable.tsx  EquityCurve.tsx  HelpTooltip.tsx  MetricCard.tsx  OrdersTable.tsx  PnLSummaryCards.tsx  PositionsTable.tsx  Providers.tsx  RichEquityCurve.tsx  SignalRow.tsx  StatusBadge.tsx  StrategyStatsTable.tsx  ThemeToggle.tsx  TradeStatsBar.tsx  UncertaintyScoreBadge.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  indicators.ts
dashboard/src/types/: index.ts
docs/: mkdocs.yml
docs/docs/: configuration.md  deployment.md  getting-started.md  index.md  writing-a-strategy.md
examples/: .env.live  .env.paper  config_binance.yaml  config_novadax.yaml  config_paper_trade.yaml
scripts/: backtest_runner.py  dashboard.py  start_all.py  stop_all.py
scripts/capture_demo/: README.md  capture.py
src/trading_crew/: __init__.py  main.py
src/trading_crew/agents/: __init__.py  analyst.py  executor.py  monitor.py  risk_manager.py  sentiment.py  sentinel.py  strategist.py
src/trading_crew/api/: app.py  deps.py  schemas.py  websocket.py
src/trading_crew/config/: __init__.py  agents.yaml  runtime_flags.py  settings.py  settings.yaml.example  tasks.yaml
src/trading_crew/crews/: __init__.py  advisory_crew.py  execution_crew.py  market_crew.py  strategy_crew.py
src/trading_crew/db/: __init__.py  models.py  session.py
src/trading_crew/flows/: __init__.py  trading_flow.py
src/trading_crew/models/: __init__.py  advisory.py  backtest.py  cycle.py  market.py  order.py  portfolio.py  risk.py  signal.py
src/trading_crew/risk/: __init__.py  circuit_breaker.py  portfolio_limits.py  position_sizer.py  sell_guard.py  stop_loss.py
src/trading_crew/services/: __init__.py  backtest_service.py  candle_loader.py  database_service.py  exchange_service.py  execution_service.py  market_intelligence_service.py  notification_service.py  risk_pipeline.py  sentiment_service.py  simulated_exchange.py  simulation_runner.py  strategy_runner.py  technical_analyzer.py  uncertainty_scorer.py
src/trading_crew/strategies/: __init__.py  base.py  bollinger.py  composite.py  ema_crossover.py  macd_crossover.py  rsi_range.py
src/trading_crew/tools/: __init__.py  database_tool.py  exchange_tool.py  notification_tool.py  risk_tool.py  strategy_tool.py  technical_analysis.py
tests/backtest/: test_backtest_service.py
tests/integration/: conftest.py  test_backtest_regression.py  test_full_cycle.py
tests/unit/: test_advisory_adjustments.py  test_candle_loader.py  test_cost_contention_policy.py  test_dashboard_api.py  test_execution_service.py  test_market_intelligence_service.py  test_models.py  test_portfolio_mutation.py  test_risk.py  test_risk_pipeline.py  test_sell_guard.py  test_sentiment_service.py  test_simulated_exchange.py  test_simulation_runner.py  test_strategies.py  test_strategy_evaluation.py  test_strategy_runner.py  test_technical_analysis_tool.py  test_trading_flow.py  test_uncertainty_scorer.py
(+28 files in other folders)
