[project]
name = "trading-crew"
version = "0.1.0"
description = "Multi-agent crypto trading system powered by CrewAI"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "trading-crew contributors" }]
keywords = ["trading", "crypto", "crewai", "multi-agent", "ccxt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "crewai>=1.0,<2.0",
    "ccxt>=4.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "pandas-ta>=0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.8",
    "detect-secrets>=1.5",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<9.7.2",
]
notifications = [
    "python-telegram-bot>=21.0",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
]

[project.scripts]
trading-crew = "trading_crew.main:main"

[project.urls]
Homepage = "https://github.com/your-org/trading-crew"
Documentation = "https://your-org.github.io/trading-crew"
Repository = "https://github.com/your-org/trading-crew"
Issues = "https://github.com/your-org/trading-crew/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_crew"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Pydantic models, SQLAlchemy ORM models, and CrewAI tools need runtime type
# resolution — their field-type imports must NOT be moved to TYPE_CHECKING.
"src/trading_crew/models/*.py" = ["TC001", "TC003"]
"src/trading_crew/db/models.py" = ["TC003"]
"src/trading_crew/tools/*.py" = ["TC001"]
# FastAPI Depends() in argument defaults is the standard router pattern.
"src/trading_crew/api/routers/*.py" = ["B008", "TC001", "TC002"]
# FastAPI resolves Request at runtime via its DI system, not just as a type hint.
"src/trading_crew/api/deps.py" = ["TC002"]
# Pydantic schemas need runtime datetime for type resolution.
"src/trading_crew/api/schemas.py" = ["TC003"]

[tool.ruff.lint.isort]
known-first-party = ["trading_crew"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "ccxt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas_ta.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "crewai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need DB or network)",
    "backtest: Backtesting tests (may be slow)",
]
